EDELIVERY-14751 Configuration options for controlling exec of the  Unit and integration tests